# ContractAudit

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/: sources.yaml
docs/: Contract_Audit_RAG_Learning_Guide.md
eval/: evm_queries.yaml
src/contract_audit_rag/: __init__.py  cli.py  config.py  evaluation.py  indexing.py  manifest.py  models.py
src/contract_audit_rag/ingestion/: __init__.py  chunking.py  crawler.py  parsers.py  pipeline.py
src/contract_audit_rag/llm/: __init__.py  base.py  mcp_host.py
src/contract_audit_rag/mcp/: __init__.py  server.py
src/contract_audit_rag/retrieval/: service.py
tests/: test_foundation.py  test_ingestion.py  test_mcp_and_prompt.py
tools/: build_learning_guide.py
